@@ -1,3 +1,8 @@
+Mon May 12 22:39:27 BST 2003  Olly Betts <olly@survex.com>
+
+	* api/ompositionlistiteratorinternal.h,
+	  include/om/ompositionlistiterator.h: Removed unused files.
+
 Mon May 12 20:51:03 BST 2003  Olly Betts <olly@survex.com>
 
 	* api/omdatabaseinternal.cc,backends/database.cc: Moved database
